<resources>
    <string name="app_name">BirdWatcher</string>
    <string name="main">Main</string>
    <string name="observations">Observations</string>
    <string name="settings">Settings</string>

    <string name="new_observation">New Observation</string>
    <string name="description">Description</string>
    <string name="title_activity_add_entry">AddEntryActivity</string>
    <string name="species">Species</string>

    <string name="settings_species_language">Species name format</string>

    <string-array name="species_language_choices">
        <item>Scientific</item>
        <item>Finnish</item>
        <item>English</item>
        <item>Swedish</item>
    </string-array>

    <string name="location_rationale">BirdWatcher adds coordinates to each observation. Please allow location!</string>
    <string name="add_species">Set species</string>
    <string name="timestamp">Timestamp</string>
    <string name="rarity">Rarity</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="save">Save</string>
    <string name="latest_observation">Latest observation!</string>
    <string name="close">Close</string>

</resources>
