<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.addentry.AddEntryActivity"
        android:fitsSystemWindows="true"
        android:id="@+id/coordinator_layout"
>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
    >

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/timestamp"
        >

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/timestamp_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:enabled="false"
            />

        </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:hint="@string/species"
        >

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/species_input"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:enabled="false"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/add_species"
                android:id="@+id/add_species_btn"
        />

    </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
            android:hint="@string/rarity"
        >
            <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/rarity_spinner"
            />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/input_observation_description"
        >
            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/description"
            />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>




</androidx.coordinatorlayout.widget.CoordinatorLayout>


